--- a/display.html
+++ b/display.html
@@ -12,6 +12,7 @@
     Computer Science and Mathematics Boxes
   </h1>
 
+<script type="text/javascript" src="BoxSet.js"> </script>
 <script type="text/javascript" src="script.js"> </script>
 
 </body>
